# roscon2022_workshop

./: README.md  TODOs.md  roscon2022_workshop.humble.repos  roscon2022_workshop.repos
controlko_bringup/: CMakeLists.txt  package.xml
controlko_bringup/config/: rrbot_chained_controllers.yaml  rrbot_controllers.yaml  test_goal_publishers_config.yaml
controlko_bringup/launch/: rrbot.launch.py  rrbot_chained_controllers.launch.py  rrbot_sim_gazebo.launch.py  rrbot_sim_gazebo_classic.launch.py  soho-12.launch.py  test_forward_position_controller.launch.py  test_joint_trajectory_controller.launch.py
controlko_controllers/: CMakeLists.txt  controlko_controllers.xml  package.xml
controlko_controllers/include/controlko_controllers/: displacement_controller.hpp  validate_displacement_controller_parameters.hpp  visibility_control.h
controlko_controllers/src/: displacement_controller.cpp  displacement_controller.yaml
controlko_controllers/test/: displacement_controller_params.yaml  displacement_controller_preceeding_params.yaml  test_displacement_controller.cpp  test_displacement_controller.hpp  test_displacement_controller_preceeding.cpp  test_load_displacement_controller.cpp
controlko_description/: CMakeLists.txt  package.xml
controlko_description/launch/: view_rrbot.launch.py
controlko_description/rviz/: rrbot.rviz
controlko_description/urdf/: common.xacro  rrbot.urdf.xacro
controlko_description/urdf/rrbot/: rrbot_macro.ros2_control.xacro  rrbot_macro.xacro
controlko_hardware_interface/: CMakeLists.txt  controlko_hardware_interface.xml  package.xml
controlko_hardware_interface/include/controlko_hardware_interface/: dr_denis_rrbot_comms.hpp  rrbot_hardware_interface.hpp  visibility_control.h
controlko_hardware_interface/src/: rrbot_hardware_interface.cpp
controlko_hardware_interface/test/: test_rrbot_hardware_interface.cpp
roscon2022_control_workshop/: CMakeLists.txt  package.xml
